--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -14,7 +14,7 @@ var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 {# 	<logo>GoodCloud</logo> #}
 	{% spaceless %}<main_nav>
 		<a href="{% url dashboard:dashboard %}" class="logo"></a>
-		<input type="search" id="global_search" name="global_search" placeholder="Everything in GoodCloud..." />
+		<input type="search" id="global_search" name="global_search" placeholder="Find anything in GoodCloud..." />
 		<div class="username_and_logout">
 			<a href="{% url accounts:my_account %}" class="my_account_btn" >My Account</a>
 
