--- a/mycelium/apps/people/templates/people/_search_result_row_person.html
+++ b/mycelium/apps/people/templates/people/_search_result_row_person.html
@@ -1,5 +1,5 @@
 {% load friendly_data_formatting %}{% with obj.primary_email as email %}{% with obj.primary_phone_number as phone %}
-<tr class="result_row person_row striped_row">
+<tr class="result_row person_row striped_row person">
 	<td class="col_0 name">
 		<a href="{% url people:person obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
