--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -20,7 +20,7 @@
   {% block css %}{% endblock %}
   {% block base_js %}{% js "js/base.js" %}{% endblock %}
   {% analytical_head_bottom %}
-
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans&v1' rel='stylesheet' type='text/css'>
 {% endblock %}
 </head>
 {% block body %}<body {% block extra_body %}{% endblock %} env="{{ENV}}">
