--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
@@ -1,6 +1,6 @@
 <tr class="result_row person_row striped_row spreadsheet_row">
 	<td class="name		"	>
-				<icon class="{{obj.contact_type}}" ></icon>
+				<icon class="spreadsheet" ></icon>
 				<a href="{% url spreadsheets:spreadsheet obj.pk %}" ><span class="highlightable">{{obj.full_name}}</span></a>
 	</td>
 	<td class="count	"	>{{obj.num_rows}} people</td>
