bit more styling stuff

--- a/mycelium/apps/accounts/templates/accounts/manage_my_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_my_account.html
@@ -32,7 +32,7 @@
 	<span class="password_saved_message"></span>
 	<span class="view_field"><span class="password_spacer">&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;</span></span>
 	<span class="edit_field">
-		<a href="#" class="mycelium_btn mycelium_small_btn change_password_btn">Change Password</a>
+		<span class="password_spacer">&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;</span> <a href="#" class="mycelium_btn mycelium_small_btn change_password_btn">Change Password</a>
 			<div class="new_password_field hidden">
 				<input name="new_password" id="id_new_password" class="excluded_field" type="text" password_change_url="{% url accounts:change_my_password %}" />
 				<a href="#" id="save_new_password_btn" class="mycelium_btn" >Save New Password</a>
