--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -14,7 +14,7 @@ body {
 }
 main_nav {
 	display: block;
-	position: absolute;	
+	position: fixed;
 	top: 0px;
 	right: 0%;
 	width: 100%;
@@ -113,7 +113,7 @@ main_nav .username_and_logout a.admin_btn:hover {
 }
 side_nav {
 	display: block;
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 8%;
 	height: 92%;
