--- a/media/css/login.css
+++ b/media/css/login.css
@@ -1,3 +1,6 @@
+body {
+	background-color: #0060b9;
+}
 .single_dialog {
 	display: block;
 	margin: 0% auto;
@@ -25,10 +28,9 @@
 	width: 100%;
 	text-align: center;
 	font-size: 60px;
-	color: #2B6004;	
-	/*background-color: rgba(29, 69, 5, 0.8);
-	-webkit-background-clip: text;
-	color: transparent;*/
+	
+	color: #74bcff;
+
 
 }
 .organization_and_domain .domain {
@@ -36,10 +38,7 @@
 	width: 100%;
 	text-align: center;
 	font-size: 18px;
-	color: #3b8505;	
-	text-shadow:		 -1px -1px 0px rgba(36, 82, 3, 0.6);
-	-moz-text-shadow:    -1px -1px 0px rgba(36, 82, 3, 0.6);
-	-webkit-text-shadow: -1px -1px 0px rgba(36, 82, 3, 0.6);
+	color: #3392ea;
 	
 }
 
