tweaked search syntax

--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
-	<input type="search" name="search_query" id="id_search_query" placeholder="Name, phone number, or email..." autofocus />
+	<input type="search" name="search_query" id="id_search_query" placeholder="Search for a person..." autofocus />
 </div>
 <new_object_buttons>
 	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn mycelium_new_btn">New Person</a>
