--- a/mycelium/apps/groups/templates/groups/search.html
+++ b/mycelium/apps/groups/templates/groups/search.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
-	<input type="search" name="search_query" id="id_search_query" placeholder="Type in a name..." autofocus />
+	<input type="search" name="search_query" id="id_search_query" placeholder="Search for a group..." autofocus />
 </div>
 <new_object_buttons>
 	<a href="{% url groups:new_group %}" class="new_group_btn mycelium_btn mycelium_new_btn">New Group</a>
